--- a/.github/workflows/cicd-terraform-dns-r53.yml
+++ b/.github/workflows/cicd-terraform-dns-r53.yml
@@ -23,6 +23,9 @@ jobs:
       contents: read
       pull-requests: write
       id-token: write
+    defaults:
+      run:
+        working-directory: "hosted_zones/dsd.io"
     steps:
     - uses: actions/checkout@v4
     - uses: hashicorp/setup-terraform@v3
