--- a/.github/workflows/cicd-terraform-dns-r53.yml
+++ b/.github/workflows/cicd-terraform-dns-r53.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - "hosted_zones/dsd.io"
+      - "hosted_zones/dsd.io/**"
     branches:
       - main
   push:
     paths:
-      - "hosted_zones/dsd.io"
+      - "hosted_zones/dsd.io/**"
     branches: [ "main" ]
 
 env:
