--- a/.github/workflows/cicd-terraform-dns-r53.yml
+++ b/.github/workflows/cicd-terraform-dns-r53.yml
@@ -47,6 +47,6 @@ jobs:
       run: terraform plan -input=false -no-color
 
     - name: Terraform Apply
-      # if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/main'
       id: apply
       run: terraform apply -input=false -no-color -auto-approve
